--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "core-js": "^3.6.5",
+    "firebase": "^8.2.9",
     "sass": "^1.32.8",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1"
